syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/fynnwu/FinancialTrading/go-api/notification;notification";

// 消息通知服务。
service NotificationService {
  // 发送通知消息。
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);

  // 查询历史通知。
  rpc GetNotificationHistory(GetNotificationHistoryRequest) returns (GetNotificationHistoryResponse);
}

// 通知详情。
message Notification {
  // 唯一 ID。
  string id = 1;
  // 接收人 ID。
  string user_id = 2;
  // 类别。
  string type = 3;
  // 标题。
  string subject = 4;
  // 正文。
  string content = 5;
  // 发送状态。
  string status = 6;
  // 失败异常原因。
  string error_message = 7;
  // 建立时间。
  google.protobuf.Timestamp created_at = 8;
  // 发出时间。
  google.protobuf.Timestamp sent_at = 9;
}

// 发送请求。
message SendNotificationRequest {
  // 用户 ID。
  string user_id = 1;
  // 类别。
  string type = 2;
  // 标题。
  string subject = 3;
  // 内容。
  string content = 4;
  // 发送目标地址。
  string target = 5;
}

// 发送响应。
message SendNotificationResponse {
  // 通知 ID。
  string notification_id = 1;
  // 当前状态。
  string status = 2;
}

// 历史查询请求。
message GetNotificationHistoryRequest {
  // 用户 ID。
  string user_id = 1;
  // 每页条数。
  int32 page_size = 2;
  // 翻页令牌。
  string page_token = 3;
}

// 历史响应。
message GetNotificationHistoryResponse {
  // 记录序列。
  repeated Notification notifications = 1;
  // 下一页令牌。
  string next_page_token = 2;
}
